kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lma
  labels:
    name: lma
    app: lead-management-automation
